--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,24 @@
   "name": "Prévisions Météo",
   "icons": [
     {
-      "src": "Meteo.png",  // samo ime datoteke
+      "src": "Meteo-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "Meteo-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "Meteo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff"
+  "theme_color": "#ffffff",
+  "orientation": "portrait"
 }
